targets/srv0/k3s/radarr/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-ingress
  namespace: apps
spec:
  entryPoints:
    - websecure
    - websecure-proxy
  routes:
    - match: Host(`radarr.$SERVICES_DOMAIN`)
      kind: Rule
      middlewares:
        - name: geoblock
          namespace: base
        - name: crowdsec-bouncer
          namespace: base
        - name: forwardauth-authelia
          namespace: base
      services:
        - name: radarr
          port: 7878
  tls:
    secretName: radarr-prod-tls
